--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Langtons ant</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 
 <!-- 
@@ -20,8 +21,6 @@ The project should be responsive and be built using the method mobile-first.
 The project must not include any coding errors, warning or notices.
 
 The project must be tested on at least two of your classmates computers. Add the testers name to the README.md file.
-
-The project should be deployed to either Netlify or Vercel
  -->
 
 <body>
