--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <!-- 
-The project should use at least three types of event listeners for example scroll, click and keypress.
 
 The project should be responsive and be built using the method mobile-first.
 
@@ -22,12 +21,21 @@ The project must be tested on at least two of your classmates computers. Add the
 <body>
     <nav>
         <div class="left-nav">
-            <p class="speed">1</p>
+            <div class="arrows-container">
+                <div class="arrow left-arrow">
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="arrow right-arrow">
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <p class="speed">1 steps per second</p>
             <div class="start">Start</div>
         </div>
         <h1 class="score">0</h1>
         <div class="right-nav">
-            <h1 class="place-holder">0</h1>
             <div class="atomatic">Atomatic</div>
         </div>
     </nav>
